--- a/purchase_landed_cost/views/account_move_view.xml
+++ b/purchase_landed_cost/views/account_move_view.xml
@@ -3,22 +3,24 @@
     <record id="view_move_form" model="ir.ui.view">
         <field name="model">account.move</field>
         <field name="inherit_id" ref="account.view_move_form" />
-        <field name="groups_id" eval="[(4, ref('purchase.group_purchase_user'))]" />
         <field name="arch" type="xml">
             <notebook position="inside">
                 <page
                     string="Landed costs"
-                    attrs="{'invisible': [('type', 'not in', ('in_invoice', 'in_refund'))]}"
+                    attrs="{'invisible': [('move_type', 'not in', ('in_invoice', 'in_refund'))]}"
+                    groups='purchase.group_purchase_user'
                 >
                     <button
                         name="%(purchase_landed_cost.action_import_landed_cost_pickings_wizard)d"
                         string="Import from pickings"
                         type="action"
+                        groups='purchase.group_purchase_user'
                     />
                     <field
                         name="expense_line_ids"
                         nolabel="1"
                         options="{'reload_on_button': true}"
+                        groups='purchase.group_purchase_user'
                     />
                 </page>
             </notebook>
